format complete upto page no. 58

--- a/009.tex
+++ b/009.tex
@@ -1106,103 +1106,72 @@ tatftatatxvXM vidAyxKayxM parxkAshakaM jAcnxnarUpatAvxtf ||
 \meaning{\ullekha{yamaniyamAsanadhAyxnarUDha pArxNAyAma... parxtAyxhAraveMba paMcasamAdhiyiM sikikx... (savasaM. 4; sidadhxrA. 950-266).}}
 \end{entry}
 
-%raghu, 009.pdf (21), 010.pdf (18), gv 15
-
 \begin{entry}
 \word{paMcasAdAKayx}
-\src{saM}
-\mng{shivanu niguRNa, sadAshivanu saguNa. saguNarUpiyAda
+\meaning{\arthanonum{shivanu niguRNa, sadAshivanu saguNa. saguNarUpiyAda
 sadAshivaneV dhAyxna-pUje modalAda kAraNagaLiMda sAdAKayx enisidAdxne. I sAdAKayxgaLu
-shiva, amUtaR, mUtaR, kataRq matutx kamaR eMdu aidu vidhavAgive.}
+shiva, amUtaR, mUtaR, kataRq matutx kamaR eMdu aidu vidhavAgive.}}
+\medskip
 \begin{shl}
 niguRNaH shivaH ituyxkatxH saguNasutx sadAshivaH |\\
 sAdAKayxshacx sa EvoVkotxV dhAyxnapUjAdikAraNAtf ||\\
 tatashacx paMcasAdaKayxBeVdaM shaqNu varAnaneV |
 \end{shl}
+\medskip
 \pauthor{(sU.A., kirx.pA., 1.29, 32)}
+\medskip
 \begin{shl}
 parxthamaM shivasAdAKayxM amUtaRM tu divxtiVyakamf |\\
 taqtiVyaM mUtaRsAdAKayxM catuthaRM kataRqnAmakamf ||\\
 paMcamaM kamaRsAdAKayxmukatxM sAdAKayxpaMcakamf |
 \end{shl}
+\medskip
 \pauthor{(vA.shi.A., 1. 31-33)}
-
-\src{va}
-\mng{shiva, amUtiR, mUtiR, kataqR matutx kamaR. ivarige sadoyxVjAta,
-  vAmadeVva, aGoVra, tatupxruSa matutx IshAnayx eMba hesarU
-  uMTu. (noVDi : {\bf sAdAKayx})}
-
-\src{kA}
-\gl{nA}
-\mng{mahAliMgadiMda oMdAda meVle matotxMdaraMte horahomimxda, jagatasxqqSiTx kAyaRkekx beVkAguva aMshagaLanonxLagoMDiruva shivasAdAKayx, amUtiRsAdAKayx, mUtiRsAdAKayx, kataqRsAdAKayx matutx kamaRsAdAKayx eMba aidu vidhavAda sAdAKayxgaLu:}
-\expl{A mahAliMgave paMcasAdAKayxvenisitutx A paMcasAdAKayxve paMcaliMgaparxkAshaveMdenisitutx (akakxma. samava. 5-20-48); A pitAmaha viSuNx mAheVshareMbavaru A paMcasAdAKayxgaLu shakitxyeMbavaru ...niVvAgadaDe sadugxruve eMta{\ri}pidiri jagake ivarAdiyaM guruve (diVkASxboV. 145-22); kaDeya nAdada sahasArxMshadoLu kUpiRniMdeDeviDade paMcasAdAKayxMgaLoMdoMda{\rO}Dane sAvira BAge BAgeyiMdogedu ...maheVshavxranudisi saqjisatoDagidanabiLavaM (viVsheYpu. 1-7-40).}
+\medskip
+\newmeaning{\ullekha{OM vishavxnirAkAra niravayaniviRkAra avagatavAgamxnavAgata... paMcasAdAKayx rUpagaLaM parxteyxVka tirxguNAtamxkarAgi... (savasaM. 3; cenanxba. 1078-363); Adi anAdi nitAyxnitayxva tiLiyalariyade... A mahAliMgave paMcasAdAKayxveMdenisitutx... (savasaM. 5; akakxma. 58-21); paMcashakitxyanu paMcasAdAKayxvanu... (savasaM. 11; toVMTasi. 36-15); aMgada meVlakekx baMda AcAraliMgada holabanariyade... sharaNana kuritu paMcasAdAKayxMgaLanoLakoMDu... (savasaM. 11; GanaliM. 737-352); A paMcanAdadalilx paMcasAdAKayx... parxthamadalilx nAma rUpu kirxV... (savasaM. 11; gumamxsi. (vacana saMcaya)); A pitAmaha viSuNx mAheVshareMbavaru A paMcasAdAKayxgaLu shakitxyeMbavaru ...niVvAgadaDe sadugxruve eMta{\ri}pidiri jagake ivarAdiyaM guruve (diVkASxboV. 145-22); kaDeya nAdada sahasArxMshadoLu kUpiRniMdeDeviDade paMcasAdAKayxMgaLoMdoMda{\rO}Dane sAvira BAge BAgeyiMdogedu ...maheVshavxranudisi saqjisatoDagidanabiLavaM (viVsheYpu. 1-7-40).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcasAthxna}
-\src{kA}
-\gl{nA}
-\info{savasaM. 7.}{}{151}{}
-\mng{paMcasAthxnada kaLeya beLagu (3 sAri baMdide).}
-\gl{nA}
-\mng{shariVradalilx iSaTxliMgavanunx dharisuva shira, kaNaR, ura, amaLoVkayx matutx kakeSx eMba aidu eDegaLu:}
-\expl{paMcasAthxnadalilxpapx liMgava karasathxladalilx mUtiRgoLisalikAkxgi kaMgaLu tuMbi bAhayxdaqSiTxya{\ri}tu liMgadaqSiTx paripUNaRvAgi ...iMtapapx vayxvadhAna savARMgaliMgiya avadhAna (madeVvi. samava. 5-306-956); paMcaparxsAdaMgaLaM paMcasAthxnadalilx dhariside (GanaliM. samava. 11-375-756).}
+\meaning{\arthanonum{paMcasAthxnada kaLeya beLagu (3 sAri baMdide). shariVradalilx iSaTxliMgavanunx dharisuva shira, kaNaR, ura, amaLoVkayx matutx kakeSx eMba aidu eDegaLu.}
+\ullekha{sadugxru kAruNayxva paDedu, pUvaRguNavaLidu... paMceVMdirxyagaLa paMcasAthxna parxveVshavAda mahAliMgakekx... (savasaM. 3; cenanxba. 227-71); haqtakxmalamadhayxdalilxpapx liMgava savARMgadalilx veVdhisi... paMcasAthxnadalilxpapx liMgava karasathxladalilx... (savasaM. 5; moVLima. 1203-360); paMcavaNaRda Basamxvanu saMcalaguNavaLidu... paMcasAthxnadalilx dharisabalalxDe BasamxdhArakareMbe... (savasaM. 10; kADasi. 69-47); shivana kaqpeyiMda enanx puNayx haNANxdaMte... mukitxpurava toVruva parxsAdava paMcasAthxnadalilx dhariside... (savasaM. 11; GanaliM. 756-370); paMcasAthxnada kaLeya beLagina beLaga kaMDu... (savasaM. 12; deVshikeVM. 499-151).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcasukoVsha}
-\src{kA}
-\gl{nA}
-\mng{= paMcakoVsha 1:}
-\expl{eseva paMcasukoVshamaM keVLa taLavadananxmayavA pArxNamayavA manoVmaya savijAcnxnamayavu viLasitAnaMdamayavu (viVsheYpu. 7-100-27).}
+\meaning{\arthanonum{(noVDi. paMcakoVsha 1)}}
+\newmeaning{\ullekha{eseva paMcasukoVshamaM keVLa taLavadananxmayavA pArxNamayavA manoVmaya savijAcnxnamayavu viLasitAnaMdamayavu (viVsheYpu. 7-100-27).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcasUtaka}
-\src{saM}
-\mng{jananasUtaka, maraNasUtaka, rajasUsxtaka, jAtisUtaka,
-uciCxSaTxsUtaka eMba aidu vidha sUtakagaLu. iSaTxliMgadhArigaLAda viVrasheYvarige I
-sUtakagaLiruvudilalx.}
+\meaning{\arthanonum{sAMparxdAyika hiMdUgaLu (liMgAyatarU seVri) aidu sUtakagaLanunx pAlisutAtxre. aveMdare : jananasUtaka, kulasUtaka, rajaH sUtaka, eMjalasUtaka matutx perxVtasUtaka, shishujananavAdavaranunx sUtaka kaLeyuvavarege muTiTxsikoLaLxbAradu matutx avaru muTiTxdudanunx nAvu muTaTxbAradu eMbudu jananasUtaka; beVre jAtiyavaranunx muTaTxbAradu matutx avaru muTiTxdudanunx nAvu muTaTxbAradu eMbudu kulasUtaka, rajasavxleyAdavaLanunx muTaTxbAradu matutx avaru muTiTxdudanunx nAvu muTaTxbAradu eMbudu rajaHsUtaka; obabxru tiMdu uLidudanunx tinanxbAradu eMbudu eMjala sUtaka, satatxvara maneyalilxruvavaranunx muTaTxbAradu, avaru muTiTxdudanunx tinanxbAradu eMbudu perxVtasUtaka (1:1202). Adare nijavAda Bakatxnu ivugaLanunx AcarisabAradu eMbudu cenanxbasavaNaNxnavara AdeVsha.}}
+\medskip
 \begin{shl}
 bAhU mama Bujw pAtu paMcasUtakavajiRtaH |
 \end{shl}
+\medskip
 \pauthor{(viV.A., 2. 267)}
+\medskip
 \begin{shl}
 yathA vishevxVshaneYkaTAyxdf gaMgAsUtakavajiRtA |\\
 tathA liMgAMgikA BakAtx paMcasUtakavajiRtAH ||
 \end{shl}
+\medskip
 \pauthor{(si.shiKoV. u., pu. 28)}
-\SEE{sUtaka}
-
-\src{va}
-\mng{sAMparxdAyika hiMdUgaLu (liMgAyatarU seVri) aidu sUtakagaLanunx
-  pAlisutAtxre. aveMdare : jananasUtaka, kulasUtaka, rajaH sUtaka,
-  eMjalasUtaka matutx perxVtasUtaka, shishujananavAdavaranunx sUtaka
-kaLeyuvavarege muTiTxsikoLaLxbAradu matutx avaru muTiTxdudanunx nAvu
-muTaTxbAradu eMbudu jananasUtaka; beVre jAtiyavaranunx muTaTxbAradu
-matutx avaru muTiTxdudanunx nAvu muTaTxbAradu eMbudu kulasUtaka,
-rajasavxleyAdavaLanunx muTaTxbAradu matutx avaru muTiTxdudanunx nAvu
-muTaTxbAradu eMbudu rajaHsUtaka; obabxru tiMdu uLidudanunx
-tinanxbAradu eMbudu eMjala sUtaka, satatxvara maneyalilxruvavaranunx
-muTaTxbAradu, avaru muTiTxdudanunx tinanxbAradu eMbudu
-perxVtasUtaka (1:1202). Adare nijavAda Bakatxnu ivugaLanunx
-AcarisabAradu eMbudu cenanxbasavaNaNxnavara AdeVsha.}
-
-\src{kA}
-\gl{nA}
-\mngnum{huTuTx, sAvu, rajasusx, eMjalu matutx kula eMba aidu bageya kAraNagaLiMduMTAguva jananasUtaka, perxVtasUtaka, rajasUsxtaka, uciCxSaTxsUtaka matutx jAtisUtaka eMba aidubageya meYligegaLu:}
-\expl{Bakatx BakatxneMdeVnu paMcasUtakavuLaLxnanxbara Bakatxne ...alalxlilx nilulx mANu ivaru sAviMge saMbaLaguMDani{\ri}dukoMbaru (alalxma. samava. 2-421-1417); rajasUsxtaka kulasUtaka jananasUtaka perxVtasUtaka uciCxSaTxsUtaka eMdaDe AtaMge guruvilalx liMgavilalx jaMgamavilalx tiVthaRparxsAdavilalx (cenanxba. samava. 3-350-1044); jAtisUtaka jananasUtaka perxVtasUtaka uciCxSaTxsUtaka rajaHsUtakameMba paMcasUtakavanatigaLedAtanAgi ...jagatUpxjayxnAgipARtaneV viVrasheYvanapapxM (viveVka. 97).}
-\mngnum{jAtisUtaka, jananasUtaka, perxVtasUtaka, nitayxsUtaka matutx uciCxSaTx sUtakagaLeMba aidu bageya meYligegaLu:}
-\expl{jAtisUtaka jananasUtakaMgaLf mahAperxVtasUtaka nitayxsUtakamaduciCxSaTxsUtakamiveV paMcasUtakaM (cebapu. 59-7).}
+\newmeaning{\ullekha{jananasUtaka, kulasUtaka, rajaHsUtaka, eMjalasUtaka, perxVtasUtaka... iMtiV paMcasUtakavanuLaLx pAtakaMgaLa... (savasaM. 1; basava. 1196-329); Bakatx BakatxneMdeVnu ? BavigaLa maneyaluLaLxnanxbara Bakatxne ?... Bakatx BakatxneMdeVnu ? paMcasUtakavuLaLxnanxbara Bakatxne ?... (savasaM. 2; alalxma. 1412-419); sheYvasidAdhxMtigaLapapx kamaRkAMDigaLu sAthxvaraliMgadeDeyalilx... uciCxSATxdi paMcasUtakagaLaMTidaDe... (savasaM. 3; cenanxba. 1613-587); nAvu sadivxVramAheVshavxrareMdu heVLuva aNaNxgaLirA... paMcasUtakaMgaLa kalipxsade... (savasaM. 8; maDimA. 646-241); upAdhiyanaLidu, nirupAdhiya tiLidu... rajasUsxtakaveMba paMcasUtakaMgaLa kaLedu... (savasaM. 14; SaNumxKa. 439-229); jAtisUtaka jananasUtaka perxVtasUtaka uciCxSaTxsUtaka rajaHsUtakameMba paMcasUtakavanatigaLedAtanAgi ...jagatUpxjayxnAgipARtaneV viVrasheYvanapapxM (viveVka. 97); jAtisUtaka jananasUtakaMgaLf mahAperxVtasUtaka nitayxsUtakamaduciCxSaTxsUtakamiveV paMcasUtakaM (cebapu. 59-7).}}
+\medskip
+\newmeaning{\arthanonum{\SEE{sUtaka}}}
 \end{entry}
 
 \begin{entry}
 \word{paMcasUtarx}
 \src{saM}
-\mng{paDiviDi, vaqSiTx, laMbina, mukAtxgucaCx, paMcavaNaR
+\meaning{\artha{paDiviDi, vaqSiTx, laMbina, mukAtxgucaCx, paMcavaNaR
 eMba viVrasheYvara aidu sUtarxgaLu. I paMcasUtarxgaLu karxmavAgi raMBApuriV, ujajxyini,
-keVdAra, shirxVsheYla, kAshiV piVThAnuyAyigaLige saMbaMdhisive.}
-\SEE{pAshupatAgama., 2. 111, 125}
+keVdAra, shirxVsheYla, kAshiV piVThAnuyAyigaLige saMbaMdhisive.}}
+\newmeaning{\SEE{pAshupatAgama., 2. 111, 125}}
+\medskip
 \begin{shl}
 paMcagoVtarxsamudUBxtAH paMcasUtArxnusAriNaH |\\
 tanAnxma reVvaNArAdhayxH sUtarxM paDiviDiVtayxpi ||\\
@@ -1211,11 +1180,14 @@ EkoVrAmeVti tanAnxma tasayx sUtarxM tu laMbakamf |\\
 tanAnxma paMDitArAdhayxsatxtUsxtarxM mukatxgucaCxkamf |\\
 vishAvxrAdheyxVti tanAnxma tatUsxtarxM paMcavaNaRkamf ||
 \end{shl}
+\medskip
 \pauthor{(viV.sa.saM., 11. 40; 1. 38-54)}
-\mng{viVrasheYvara pUjAkamaRgaLa vivara matutx AcaraNeya
+\medskip
+\newmeaning{\artha{viVrasheYvara pUjAkamaRgaLa vivara matutx AcaraNeya
 padadhxtigaLanunx nirUpisiruva aidu sUtarxgaLu. paDiviDi (paDivxDi), vaqSiTx,
 laMbana (laMbaka), mukAtxgucaCx, paMcavaNaR - ivugaLeV paMcasUtarxgaLu. ivu karxmavAgi
-raMBApuriV, ujajxyini, keVdAra, shirxVsheYla matutx kAshiVpiVTha paraMparege saMbaMdhisive.}
+raMBApuriV, ujajxyini, keVdAra, shirxVsheYla matutx kAshiVpiVTha paraMparege saMbaMdhisive.}}
+\medskip
 \begin{shl}
 paMcAnana tanudUBxtAnf paMcAkaSxramanUpamAnf |\\
 paMcasUtarxkaqtoV vaMdeV paMcAcAyARnf jagadugxrUnf ||\\
@@ -1225,141 +1197,64 @@ EkoVrAmeVti tanAnxma tasayx sUtarxM tu laMbakamf |\\
 tanAnxma paMDitArAdhayxH tatUsxtarxM tu mukatxgucaCxkamf |\\
 vishAvxrAdheyxVti tanAnxma tatUsxtarxM tu paMcavaNaRkamf |
 \end{shl}
+\medskip
 \pauthor{(viV.sa.saM. 1.37-54)}
-
-\src{kA}
-\gl{nAmapada}
-\info{pA.soV.pu}{12neV saMdhi-padayx 15}{249}{1912}
-\mng{paMcasUtarx shile, loVhAdigaLiMda shivaliMgagaLanunx mADisuvAga,
+\medskip
+\newmeaning{\artha{paMcasUtarx shile, loVhAdigaLiMda shivaliMgagaLanunx mADisuvAga,
   avugaLa etatxra, agala, gAtarx muMtAduvugaLa viSayadalilx
-  anusarisabeVkAda aidu bageya niyamagaLu. vacana: iMtu
-  paMcasUtarxmuLaLx piVThaliMgadoLeMdeV jAti shilAdigaLAda
-  kAMtimayavapapx liMgasathxlamaM tiVthARMbu paMcagavayxBasita
-  mishorxVdakaMgaLiM paripUtamAda tirxvidha kuMBadoLf....  avagAhamirisi} 
-\gl{nA}
-\info{savasaM. 7}{}{36}{}
-\mng{liMgasavxrUpakekx paMcasUtarxda lakaSxNa.}
-\gl{nA}
-\mngnum{shile, loVhAdigaLiMda shivaliMgagaLanunx mADisuvAga, avugaLa etatxra, agala, gAtarx muMtAduvugaLa viSayadalilx anusarisabeVkAda aidu bageya niyamagaLu; 
- ``liMgapiVThagaLu samavAgi paMcasUtarx parxmANavu AgamoVkatxdaMte shudadhxvAdare AyureYshavxyaRgaLuMTAguvuvu... liMgavaM baLasida sUtarx parxmANaveV 
-\explnum{liMgapiVThavaM aLeyuvudu}
-\explnum{liMgoVnanxta piVThaparxmANa}
-\explnum{goVmuKada agarxliMga masatxkaparxmANa}
-\explnum{adaradhaRveV goVmuKavu}
-\explnum{-hiVge paMcasUtarxgaLu shivAgamadathaRvu" (viVsheYpu. 7neya kAMDa, tAtapxyaRcaMdirxke. puTa 30):}}
-\expl{iMtu paMcasUtarxmuLaLx piVThaliMgadoLeMdeV jAtishilAdigaLAda kAMtimayavapapx liMgasathxlamaM tiVthARMbu paMcagavayx Basita mishorxVdakaMgaLiM paripUtamAda tirxvidha kuMBadoLf... avagAhamirisi (viveVka. 101); A paMcasUtarxda vidhAnaveMtene mahAshirxV paramaliMgamaM baLasidaR sUtarxveV tA pavaNadoMdu sUtarxM liMgapiVThavaLeyalekxraDu liMgoVnanxtaM A piVThadeDeyoLeV mU{\ru} goVmuKadagarx Opa liMgada masatxkakekx nAlakxda{\ra}dhaRveV parikisalekx goVmuKaviMtu paMcasUtarxM shivAgamadathaRveY (viVsheYpu. 7-105-47). ``shivaliMgagaLa parxtiSAThxkAladalilx gamanisuva liMgoVcacxte, liMgavisAtxra, liMgaswthxlayx, piVThavisAtxra, parxnAlikAmAnagaLeMba aidu sUtarxgaLu" (kananxni. 5-5047);}
-\mngnum{diVkASxvidhi muMtAda maMgaLakAyaR- gaLigAgi sAthxpisuva paMcakalashagaLalilxya gurukalashakekx, maMtarxdhAyxnasahitavAgi uragabaMdhadaMte saMbaMdhisuva aidu eLegaLu:}
-\expl{saMcadoVvariyoLage paMcasUtarxvu miMci kaMcumiMcina saMcalana nuMgitu paMcasUtarxvu miMci saMcadoVvarigoMDu paMcamuKa paramaguruvAda sharaNa (padagoV. {\rm v-}2); I maMtarxdiMda gurukalashakekx paMcasUtarxMgaLanikikx paMcapalalxvaMgaLanikikx paMcamuKaMgaLanikikx gurukalashavaM sAthxpayxvaM mADuvudu (gaNaBA. 189-21).}
+  anusarisabeVkAda aidu bageya niyamagaLu. vacana.}
+\ullekha{``liMgapiVThagaLu samavAgi paMcasUtarx parxmANavu AgamoVkatxdaMte shudadhxvAdare AyureYshavxyaRgaLuMTAguvuvu... liMgavaM baLasida sUtarx parxmANaveV 1. liMgapiVThavaM aLeyuvudu, 2. liMgoVnanxta piVThaparxmANa, 3. goVmuKada agarxliMga masatxkaparxmANa, 4. adaradhaRveV goVmuKavu, 5. -hiVge paMcasUtarxgaLu shivAgamadathaRvu" (viVsheYpu. 7neya kAMDa, tAtapxyaRcaMdirxke. puTa 30); iMtu paMcasUtarxmuLaLx piVThaliMgadoLeMdeV jAtishilAdigaLAda kAMtimayavapapx liMgasathxlamaM tiVthARMbu paMcagavayx Basita mishorxVdakaMgaLiM paripUtamAda tirxvidha kuMBadoLf... avagAhamirisi (viveVka. 101); A paMcasUtarxda vidhAnaveMtene mahAshirxV paramaliMgamaM baLasidaR sUtarxveV tA pavaNadoMdu sUtarxM liMgapiVThavaLeyalekxraDu liMgoVnanxtaM A piVThadeDeyoLeV mU{\ru} goVmuKadagarx Opa liMgada masatxkakekx nAlakxda{\ra}dhaRveV parikisalekx goVmuKaviMtu paMcasUtarxM shivAgamadathaRveY (viVsheYpu. 7-105-47). ``shivaliMgagaLa parxtiSAThxkAladalilx gamanisuva liMgoVcacxte, liMgavisAtxra, liMgaswthxlayx, piVThavisAtxra, parxnAlikAmAnagaLeMba aidu sUtarxgaLu" (kananxni. 5-5047);}}
+\newmeaning{\artha{diVkASxvidhi muMtAda maMgaLakAyaR- gaLigAgi sAthxpisuva paMcakalashagaLalilxya gurukalashakekx, maMtarxdhAyxnasahitavAgi uragabaMdhadaMte saMbaMdhisuva aidu eLegaLu.}
+\ullekha{saMcadoVvariyoLage paMcasUtarxvu miMci kaMcumiMcina saMcalana nuMgitu paMcasUtarxvu miMci saMcadoVvarigoMDu paMcamuKa paramaguruvAda sharaNa (padagoV. {\rm v-}2); I maMtarxdiMda gurukalashakekx paMcasUtarxMgaLanikikx paMcapalalxvaMgaLanikikx paMcamuKaMgaLanikikx gurukalashavaM sAthxpayxvaM mADuvudu (gaNaBA. 189-21).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcasUtarxliMga}
 \src{saM}
-\mng{liMgapiVThada udadx, agala matutx etatxra liMgada
+\meaning{\arthanonum{liMgapiVThada udadx, agala matutx etatxra liMgada
 sutatxLatege samanAgirabeVku. matutx goVmuKavu liMgada sutatxLateya adhaRdaSiTxrabeVku. I
-lakaSxNagaLiMda kUDiruva liMga.}
+lakaSxNagaLiMda kUDiruva liMga.}}
+\medskip
 \begin{shl}
 shaqNuSAvxvahitaH putarx vakeSxyXV liMgasayx lakaSxNamf |\\
 paMcasUtArxtamxkaM liMgaM pUjayeVdiSaTxsidadhxyeV ||\\
 liMgavaqtatxsamaM piVThaM diVGaRM visAtxramunanxtamf |\\
 tadadhaRM goVmuKaM ceYva paMcasUtarxM parxkiVtiRtamf ||
 \end{shl}
+\medskip
 \pauthor{(makuTa, kirx.pA., 4.45-46; pAra. A., 16.39-41)}
+\medskip
 \begin{shl}
 shakitxgoVlakasaMyukatxM paMcasUtarxsamanivxtamf |
 \end{shl}
+\medskip
 \pauthor{(viV.A., 2.202)}
 \end{entry}
 
 \begin{entry}
 \word{paMcAMga}
-\src{kA}
-\gl{nA}
-\info{savasaM. 12.}{}{80}{}
-\mng{paMcAMgada keVLi naDedalilx gurudorxVhi.}
-\gl{}
-\info{savasaM. 7}{}{364}{}
-\begin{shl}
-paMca aMdare aidu aMgaveMdare deVha\\
-paqthivx aSuTx teVja vAyu AkAsha\\
-I aidu kUDi deVhavAdiMpatx\\
-paMcAMgaveMdare heVLihe keVLiraNA.
-\end{shl}
-\gl{nA}
-\info{savasaM. 7.}{}{363}{}
-\begin{shl}
-paMcAMga keVLida daSabarxhamxna talehoVyitu\\
-... ...\\
-... ...\\
-... ...\\
-... ...
-\end{shl}
-\mng{paMcAMga 7 sAri baMdide.}
-\begin{shl}
-paMcAMga paMcAMgaveMdu kaLavaLagoMDu\\
-malava ... muTaTxdiruvudeV paMcAMga\\
-parasatiya muTaTxdiruvudeV paMcAMga\\
-sUtakanAsitxyAdudeV paMcAMga\\
-paMcAMgara nilavanari\\
-paMcAMgaveMba shabadxkakxthaR\\
-paMcaveMdare aidu aMgaveMdare deVha\\
-paMcAMgada BUtavaLidu\\
-inenxtatxNa paMcAMgavadayayx.
-\end{shl}
-\end{entry}
-
-\begin{entry}
-\word{paMcAkaSxraM-paMcaliMga}
-\src{kA}
-\gl{}
-\info{Sava}{6-144}{220}{1980.}
-\mng{maMtarxmayaveMdariduM iMtapapx paMcAkaSxraMgaLeV paMcaliMgaM}
-\end{entry}
-
-\begin{entry}
-\word{paMcAkaSxra}
-\src{saM}
-\gl{}
-\info{}{}{}{}
-\begin{shl}
-...vakatxrXM tu paMcAkaSxrA : 3 : 2\\
-...gateV yamapurAloVkAya paMcAkaSxriVM : 86 : 35\\
-paMcAkaSxrajapeV niSoThx ... || : - : 113
-\end{shl}
-
-\src{va}
-\mng{na, ma, shi, vA, ya eMba aidu akaSxrada maMtarx.}
-
-\src{kA}
-\gl{nAmapada}
-\info{sA.ga.sAM}{anubaMdha 2 sAnaMdagaNeVshavxra ragaLe}{77}{1976}
-\begin{shl}
-eMtenalu paMcAkaSxrave shivaM tAnAda\\
-kaMtuhara tA parxNama paMcAkaSxraveyAda
-\end{shl}
-\mng{paMcAkaSxra=aidu akaSxragaLuLaLx shivamaMtarx. I paMcAkaSxrada
-  aidu bageyanunx shivasharaNa Adayayxnu mUlapaMcAkaSxra,
-  sUthxlapaMcAkaSxra, sUkaSxmXpaMcAkaSxra, mAyAKayx paMcAkaSxra,
-  parxsAda paMcAkaSxragaLeMdu heVLidAdxre matutx pApagaLa nivAraNe mADikoLaLxlu
-  shivana paMcamuKagaLeMdu tiLisi paMcAkaSxravanunx japisi
-  eMdidAdxre.} 
-\gl{nA}
-\mng{na maH shi vA ya eMba aidu pavitarx akaSxragaLu matutx I aidu akaSxragaLiMdAda oMdu mahAmaMtarx; OMkAradiMda udaBxvisida I paMcAkaSxragaLu saqSiTxya sakala vasutxgaLalilxyU tuMbi ceYtanayxvanunx niVDutatxve. A vasutxgaLa shakitx matutx kAyaRparxkirxyegaLige iveV kAraNavAgirutatxve. samasatxmaMtarxgaLa sAravuLaLx paMcAkaSxrimaMtarxvanunx diVkASxkAladalilx guruvu tananx shiSayxnige upadeVshisutAtxne. idu shakitxmaMtarxveMdU idakekx OMkAravu saMbaMdhisidAga shivashakitxmaMtarxvAguvudeMdU heVLalAgide:}
-\expl{cidaCxna iSaTx mahAliMgava uraHsathxladalilx dharisabeVkAdaDe ...paMcAkaSxra SaDakaSxra navAkaSxrasamxraNeyiMda paDakaMDu maMtarxsamxraNeyiMda liMgajaMgama Bakatx sharaNagaNaMgaLige salisi mukAtxyava mADi parxsAdaBoVgava tiLidAcarisu (cenanxba. samava. 3-297-936); ipapxtetxMTu Agama mUvatetxraDu upaniSatutxgaLelalxvU paMcAkaSxrada savxrUpavana{\ri}yade niMdavu (Adayayx. samava. 6-307-989); paMcAkaSxrava koLaloLudutatx shivaniLayadoLu pokakx varacokakxneYnArareLasi manavAre neneyuvenu (purAta. 6-51).}
+\meaning{\ullekha{anAdiyalobabx sharaNa... A maqgiyoLu paMcAMga paMcataMDadavarelalx huTiTx vatiRsi layavAgi... (savasaM. 2; alalxma. 761-210); paqthAvxyXdipaMcatatavxkekx ipapxtetxYdu guNaMgaLu sahita... deVha shira muKa pANi caraNaveMba paMcAMga hiVnavAgide... (savasaM. 3; cenanxba. 1350-477); gurupAdoVdakaveMdu, kirxyApAdoVdakaveMdu... tananx paMcAMguliyiMda udakanadidx... (savasaM. 4; sidadhxrA. 500-141); paMcAMgava baredu Odi... (savasaM. 10; kADasi. 353-214); guruliMgajaMgamada BakatxnAdeneMdu... paMcAMgava keVLi naDedalilx gurudorxVhiyeMbe... (savasaM. 12; deVshikeVM. 266-80).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcAkaSxra(maMtarx)}
-\src{saM}
-\mng{`namaH shivAya' eMba
+\meaning{\arthanonum{`namaH shivAya' eMba
 aidu akaSxragaLa maMtarx. idu elalx maMtarxgaLalilxyU sherxVSaThxvAdudu. elalx
 shuBakamaRgaLalilx baLasuvaMtaha maMtarx. idakekx mUlamaMtarx eMba hesarU saha ide.
-jagatitxnalilx parxsidadhxrAgiruva elalx aidara samUhada saMkeVtavAda maMtarxvidu.}
+jagatitxnalilx parxsidadhxrAgiruva elalx aidara samUhada saMkeVtavAda maMtarxvidu.  I paMcAkaSxrada
+  aidu bageyanunx shivasharaNa Adayayxnu mUlapaMcAkaSxra,
+  sUthxlapaMcAkaSxra, sUkaSxmXpaMcAkaSxra, mAyAKayx paMcAkaSxra,
+  parxsAda paMcAkaSxragaLeMdu heVLidAdxre matutx pApagaLa nivAraNe mADikoLaLxlu
+  shivana paMcamuKagaLeMdu tiLisi paMcAkaSxravanunx japisi
+  eMdidAdxre. na maH shi vA ya eMba aidu pavitarx akaSxragaLu matutx I aidu akaSxragaLiMdAda oMdu mahAmaMtarx; OMkAradiMda udaBxvisida I paMcAkaSxragaLu saqSiTxya sakala vasutxgaLalilxyU tuMbi ceYtanayxvanunx niVDutatxve. A vasutxgaLa shakitx matutx kAyaRparxkirxyegaLige iveV kAraNavAgirutatxve. samasatxmaMtarxgaLa sAravuLaLx paMcAkaSxrimaMtarxvanunx diVkASxkAladalilx guruvu tananx shiSayxnige upadeVshisutAtxne. idu shakitxmaMtarxveMdU idakekx OMkAravu saMbaMdhisidAga shivashakitxmaMtarxvAguvudeMdU heVLalAgide.}}
+\medskip
 \begin{shl}
 namaH shabadxM vadeVtf pUvaRM shivAyeVti tataH paramf |\\
 maMtarxH paMcAkaSxroV heyxVSa savaRshurxtishiroVgataH ||
 \end{shl}
+\medskip
 \pauthor{(sU.A., kirx.pA., 3.13; caM.A., kirx.pA., 8.5; si.shi., 8.7)}
+\medskip
 \begin{shl}
 ESa maMtorxV mahAshakitxH IshavxraparxtipAdakaH |\\
 sakaqducAcxraNAdeVva savaRsididhxparxtipAdakaH ||\\
@@ -1367,26 +1262,29 @@ sapatxkoVTiSu maMterxVSu maMtarxH paMcAkaSxroV mahAnf |\\
 paMcadhA paMcadhA yAni parxsidAdhxni visheVSataH |\\
 tAni savARNi vasUtxni paMcAkaSxramayAni hi ||
 \end{shl}
+\medskip
 \pauthor{(si.shi., 8. 4, 16)}
+\medskip
+\newmeaning{\ullekha{paMcAkaSxrava koLaloLudutatx shivaniLayadoLu pokakx varacokakxneYnArareLasi manavAre neneyuvenu (purAta. 6-51).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcAkaSxranAyxsa}
 \src{saM}
-\mng{iSaTxliMgapUjAkAladalilx deVhakekx
-vidAyxmahatavxvanunx saMpAdisalu Acarisuva aidu vidha nAyxsagaLalilx oMdu. paMcAkaSxra
-maMtorxVcACxrapUvaRkavAgi mADuva nAyxsavidhi.}
+\meaning{\arthanonum{namaHshivAya eMba aidu akaSxragaLa maMtarxvanunx tale, haNe, koraLu, ede matutx hokukxLu eMba aidu eDegaLalilx saMbaMdhisuvudu.}}
+\medskip
 \begin{shl}
 paMcamaH kathayxteV sadiBxnARyxsaH paMcAkaSxrAtamxkaH |
 \end{shl}
+\medskip
 \pauthor{(caM.A., kirx.pA., 11. 36)}
-\SEE{nAyxsavidhi}
-
-\src{kA}
-\gl{nA}
-\mng{namaHshivAya eMba aidu akaSxragaLa maMtarxvanunx tale, haNe, koraLu, ede matutx hokukxLu eMba aidu eDegaLalilx saMbaMdhisuvudu:}
-\expl{nAyxsagaLu -ivu kalAnAyxsa, SaDaMganAyxsa, paMcabarxhamxnAyxsa, paMcAkaSxranAyxsa eMdirutatxve ...mUdhaR, lalATa, kaMTha, haqdaya, nABigaLalilx yakArAdi nakArAMtamAgi paMcAkaSxragaLanunx nAyxsamADuvudu paMcAkaSxranAyxsa (shivAkoV. 201-375).}
+\smallskip
+\newmeaning{\ullekha{nAyxsagaLu -ivu kalAnAyxsa, SaDaMganAyxsa, paMcabarxhamxnAyxsa, paMcAkaSxranAyxsa eMdirutatxve ...mUdhaR, lalATa, kaMTha, haqdaya, nABigaLalilx yakArAdi nakArAMtamAgi paMcAkaSxragaLanunx nAyxsamADuvudu paMcAkaSxranAyxsa (shivAkoV. 201-375).}}
+\smallskip
+\newmeaning{\SEE{nAyxsavidhi}}
 \end{entry}
+
+%raghu, gv 17, 009.pdf 24, 010.pdf 20
 
 \begin{entry}
 \word{paMcAkaSxramaMtarx}
